[package]
name = "wasm-pdf-generator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "HtmlInputElement",
    "Element",
    "Headers",
    "Blob",
    "Url",
    "CssStyleDeclaration",
    "FileReader",
    "FormData",
    "KeyboardEvent",
    "MediaQueryList",
    "Storage",
    "Response",
    "Request",
    "RequestInit",
    "console",
    "ProgressEvent",
    "MouseEvent",
    "File",
    "FileList", 
       "Element",
    "HtmlElement",
    "NodeList"
]

[dependencies]
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"

console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
